[package]
name = "ethane"
version = "0.1.0"
authors = ["thojest <thojest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.12", features = ["tls"]}
http = "0.2"
log = "0.4"
ethereum-types = "0.10"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
hex = "0.4"
ureq = "2"

[dev-dependencies]
test-helper = { path = "./test-helper"}
