[package]
name = "ethane"
version = "0.1.1"
authors = ["thojest <thojest@gmail.com>"]
edition = "2018"
description = "An alternative web3 implementation with the aim of being slim and simple"
repository = "https://github.com/thojest/ethane"
license = "MIT"
keywords = ["web3", "ethereum", "jsonrpc", "rpc", "simple"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.13", features = ["rustls-tls"], default-features = false}
http = "0.2"
log = "0.4"
ethereum-types = "0.11"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
hex = "0.4"
ureq = "2"
funty = "~1.1.0"

[dev-dependencies]
test-helper = { path = "./test-helper"}
