[package]
name = "test-helper"
version = "0.1.0"
authors = ["thojest <thojest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethane = { path = "../" }
serde = "1"
serde_json = "1"
rand = "0.8"
port_scanner = "0.1"
tiny-keccak = "2"
