[package]
name = "test-helper"
version = "0.1.0"
authors = ["thojest <thojest@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethane = { path = "../" }
serde = "1"
serde_json = "1"
rand = "0.8"
tiny-keccak = "2"
regex = "1"